// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation should match snapshot 1`] = `
<div>
  <button
    class="sc-bdfBwQ sdFZx"
    data-testid="navButton"
  >
    <div
      class="sc-gsTCUz sc-dlfnbm bytOLq iNoqna"
    />
    <div
      class="sc-gsTCUz sc-hKgILt bytOLq dZJXyp"
    />
    <div
      class="sc-gsTCUz sc-eCssSg bytOLq eLeZFd"
    />
    <div
      class="sc-gsTCUz sc-jSgupP bytOLq imevjb"
    />
    <div
      class="sc-gKsewC wEEon"
    />
    <div
      class="sc-gKsewC sc-iBPRYJ wEEon ekDqeo"
    />
  </button>
  <nav
    class="sc-fodVxV iYzKGD"
  >
    <div
      class="sc-fFubgz fTHQZi"
    >
      <a
        class="sc-bkzZxe ddUFlK"
        href="/"
      >
        Home page
      </a>
      <a
        class="sc-bkzZxe ddUFlK"
        href="/calendar"
      >
        Your tracker
      </a>
      <a
        class="sc-bkzZxe ddUFlK"
        href="/login"
      >
        Login
      </a>
      <a
        class="sc-bkzZxe ddUFlK"
        href="/register"
      >
        Register
      </a>
    </div>
  </nav>
</div>
`;

exports[`Navigation should open nav and redirect after click 1`] = `
<div>
  <button
    class="sc-bdfBwQ kMWbBq"
    data-testid="navButton"
    open=""
  >
    <div
      class="sc-gsTCUz sc-dlfnbm fHaXLb iNoqna"
      open=""
    />
    <div
      class="sc-gsTCUz sc-hKgILt fHaXLb dZJXyp"
      open=""
    />
    <div
      class="sc-gsTCUz sc-eCssSg fHaXLb eLeZFd"
      open=""
    />
    <div
      class="sc-gsTCUz sc-jSgupP fHaXLb imevjb"
      open=""
    />
    <div
      class="sc-gKsewC JhcfG"
      open=""
    />
    <div
      class="sc-gKsewC sc-iBPRYJ JhcfG ekDqeo"
      open=""
    />
  </button>
  <nav
    class="sc-fodVxV eLNwrj"
    open=""
  >
    <div
      class="sc-fFubgz fTHQZi"
    >
      <a
        class="sc-bkzZxe kEFHMp"
        href="/"
        open=""
      >
        Home page
      </a>
      <a
        class="sc-bkzZxe kEFHMp"
        href="/calendar"
        open=""
      >
        Your tracker
      </a>
      <a
        class="sc-bkzZxe kEFHMp"
        href="/login"
        open=""
      >
        Login
      </a>
      <a
        class="sc-bkzZxe kEFHMp"
        href="/register"
        open=""
      >
        Register
      </a>
    </div>
  </nav>
</div>
`;
